# rust-for-data-science

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: applications.md  cargo.md  pyo3.md  rust.md
ml_demos_rs/: Cargo.toml
ml_demos_rs/py_project/: kmeans.ipynb  kmeans_py_scratch.py  kmeans_py_sklearn.py  kmeans_rust_scratch.py  main.ipynb  measure.py  measure_all.py  statif_split.ipynb  stratif1_py_scratch.py  stratif1_py_sklearn.py  stratif1_rust_scratch.py  stratif2_py_scratch.py  stratif2_rust_scratch.py
ml_demos_rs/src/: kmeans.rs  lib.rs
poly_match_rs/: pyproject.toml
poly_match_rs/py_project/: measure.py  measure_all.py  poly_match_v0.py  poly_match_v1.py  poly_match_v2.py  poly_match_v3.py  poly_match_v4.py
poly_match_rs/src/: lib.rs  lib_v1.rs  lib_v2.rs  lib_v3.rs
rust_files/: Cargo.toml
rust_pyo3/: Cargo.toml
rust_pyo3/py_project/: kmeans.ipynb  main.ipynb  statif_split.ipynb
rust_pyo3/src/: kmeans.rs  lib.rs  linfa_kmeans.rs  stratif_split.rs
src/: main.ipynb
