[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "poly_match_rs"
requires-python = ">=3.7"
version = "0.1.0"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
